@@ -37,7 +37,7 @@ class CacheHandlerChainFactoryTest {
     @BeforeEach
     void setUp() {
         properties = mock(RedisProCacheProperties.class);
-        factory = new CacheHandlerChainFactory(Collections.emptyList(), properties, null, new ChainEngine());
+        factory = new CacheHandlerChainFactory(Collections.emptyList(), properties, ResolvedMetrics.resolve(null, null), new ChainEngine(), List.of());
     }
     private CacheContext testContext() {
         return CacheContext.of(CacheInput.builder()
@@ -59,7 +59,7 @@ class CacheHandlerChainFactoryTest {
         @Test
         @DisplayName("creates empty chain when no handlers provided")
         void createChain_noHandlers_createsEmptyChain() {
-            factory = new CacheHandlerChainFactory(Collections.emptyList(), properties, null, new ChainEngine());
+            factory = new CacheHandlerChainFactory(Collections.emptyList(), properties, ResolvedMetrics.resolve(null, null), new ChainEngine(), List.of());
 
             CacheHandlerChain chain = factory.createChain();
 
@@ -74,7 +74,7 @@ class CacheHandlerChainFactoryTest {
                     new AnotherTestHandler(),
                     new YetAnotherTestHandler()
             );
-            factory = new CacheHandlerChainFactory(handlers, properties, null, new ChainEngine());
+            factory = new CacheHandlerChainFactory(handlers, properties, ResolvedMetrics.resolve(null, null), new ChainEngine(), List.of());
 
             CacheHandlerChain chain = factory.createChain();
 
@@ -89,7 +89,7 @@ class CacheHandlerChainFactoryTest {
                     new BloomFilterTestHandler(),
                     new SyncLockTestHandler()
             );
-            factory = new CacheHandlerChainFactory(handlers, properties, null, new ChainEngine());
+            factory = new CacheHandlerChainFactory(handlers, properties, ResolvedMetrics.resolve(null, null), new ChainEngine(), List.of());
 
             CacheResult result = factory.createChain().execute(testContext());
 
@@ -103,7 +103,7 @@ class CacheHandlerChainFactoryTest {
                     new TestCacheHandler(),
                     new PriorityTestHandler()
             );
-            factory = new CacheHandlerChainFactory(handlers, properties, null, new ChainEngine());
+            factory = new CacheHandlerChainFactory(handlers, properties, ResolvedMetrics.resolve(null, null), new ChainEngine(), List.of());
 
             CacheResult result = factory.createChain().execute(testContext());
 
@@ -117,7 +117,7 @@ class CacheHandlerChainFactoryTest {
                     new TestCacheHandler(),
                     new AnotherTestHandler()
             );
-            factory = new CacheHandlerChainFactory(handlers, properties, null, new ChainEngine());
+            factory = new CacheHandlerChainFactory(handlers, properties, ResolvedMetrics.resolve(null, null), new ChainEngine(), List.of());
 
             CacheHandlerChain chain = factory.createChain();
 
@@ -137,7 +137,7 @@ class CacheHandlerChainFactoryTest {
                     new AnotherTestHandler()
             );
             when(properties.getDisabledHandlers()).thenReturn(List.of("test-cache"));
-            factory = new CacheHandlerChainFactory(handlers, properties, null, new ChainEngine());
+            factory = new CacheHandlerChainFactory(handlers, properties, ResolvedMetrics.resolve(null, null), new ChainEngine(), List.of());
 
             CacheHandlerChain chain = factory.createChain();
 
@@ -153,7 +153,7 @@ class CacheHandlerChainFactoryTest {
                     new AnotherTestHandler()
             );
             when(properties.getDisabledHandlers()).thenReturn(List.of("test-cache"));
-            factory = new CacheHandlerChainFactory(handlers, properties, null, new ChainEngine());
+            factory = new CacheHandlerChainFactory(handlers, properties, ResolvedMetrics.resolve(null, null), new ChainEngine(), List.of());
 
             CacheHandlerChain chain = factory.createChain();
 
@@ -169,7 +169,7 @@ class CacheHandlerChainFactoryTest {
                     new AnotherTestHandler()
             );
             when(properties.getDisabledHandlers()).thenReturn(Collections.emptyList());
-            factory = new CacheHandlerChainFactory(handlers, properties, null, new ChainEngine());
+            factory = new CacheHandlerChainFactory(handlers, properties, ResolvedMetrics.resolve(null, null), new ChainEngine(), List.of());
 
             CacheHandlerChain chain = factory.createChain();
 
@@ -185,7 +185,7 @@ class CacheHandlerChainFactoryTest {
                     new AnotherTestHandler()
             );
             when(properties.getDisabledHandlers()).thenReturn(List.of("test-cache", "another-test"));
-            factory = new CacheHandlerChainFactory(handlers, properties, null, new ChainEngine());
+            factory = new CacheHandlerChainFactory(handlers, properties, ResolvedMetrics.resolve(null, null), new ChainEngine(), List.of());
 
             CacheHandlerChain chain = factory.createChain();
 
@@ -208,7 +208,7 @@ class CacheHandlerChainFactoryTest {
             List<CacheHandler> handlers = List.of(
                     new BloomFilterHandler(), new SyncLockHandler(), new EarlyExpirationHandler(),
                     new TtlHandler(), new NullValueHandler(), new ActualCacheHandler());
-            factory = new CacheHandlerChainFactory(handlers, properties, null, new ChainEngine());
+            factory = new CacheHandlerChainFactory(handlers, properties, ResolvedMetrics.resolve(null, null), new ChainEngine(), List.of());
 
             CacheHandlerChain chain = factory.createChain();
 
@@ -224,7 +224,7 @@ class CacheHandlerChainFactoryTest {
 
             List<CacheHandler> handlers = List.of(
                     new BloomFilterHandler(), new TtlHandler(), new ActualCacheHandler());
-            factory = new CacheHandlerChainFactory(handlers, properties, null, new ChainEngine());
+            factory = new CacheHandlerChainFactory(handlers, properties, ResolvedMetrics.resolve(null, null), new ChainEngine(), List.of());
 
             CacheHandlerChain chain = factory.createChain();
 
@@ -336,7 +336,7 @@ class CacheHandlerChainFactoryTest {
             List<CacheHandler> handlers = List.of(new BloomFilterHandler(), new SyncLockHandler(),
                     new EarlyExpirationHandler(), new TtlHandler(), new NullValueHandler(),
                     new ActualCacheHandler());
-            factory = new CacheHandlerChainFactory(handlers, properties, null, new ChainEngine());
+            factory = new CacheHandlerChainFactory(handlers, properties, ResolvedMetrics.resolve(null, null), new ChainEngine(), List.of());
             return factory.createChain();
         }
 
@@ -350,7 +350,7 @@ class CacheHandlerChainFactoryTest {
 
             List<CacheHandler> handlers = List.of(
                     new OddlyNamedBloomHandler(), new TtlHandler(), new ActualCacheHandler());
-            factory = new CacheHandlerChainFactory(handlers, properties, null, new ChainEngine());
+            factory = new CacheHandlerChainFactory(handlers, properties, ResolvedMetrics.resolve(null, null), new ChainEngine(), List.of());
 
             CacheHandlerChain chain = factory.createChain();
 
@@ -365,7 +365,7 @@ class CacheHandlerChainFactoryTest {
 
             List<CacheHandler> handlers = List.of(
                     new WeirdlyNamedLockHandler(), new TtlHandler());
-            factory = new CacheHandlerChainFactory(handlers, properties, null, new ChainEngine());
+            factory = new CacheHandlerChainFactory(handlers, properties, ResolvedMetrics.resolve(null, null), new ChainEngine(), List.of());
 
             CacheHandlerChain chain = factory.createChain();
 
@@ -387,10 +387,10 @@ class CacheHandlerChainFactoryTest {
             when(provider.getIfAvailable()).thenReturn(registry);
 
             CacheHandler probe = new FiredCounterProbe();
-            // P1-API-001-C:observer 为有序 Bean,工厂注入 List<ChainObserver> 后单一注册。
-            // 4-arg 便捷构造(空 observer)不装配 registry observer — fired counter 走标准 bean。
+            // P1-API-001-C:observer 为有序 Bean,工厂经主构造注入 List<ChainObserver> 后单一注册。
+            // 主构造注入的 registry 驱动 fired counter observer bean。
             factory = new CacheHandlerChainFactory(
-                    List.of(probe), properties, provider, new ChainEngine(),
+                    List.of(probe), properties, ResolvedMetrics.resolve(provider, null), new ChainEngine(),
                     List.of(new io.github.davidhlp.spring.cache.redis.cache.FiredCounterChainObserver(registry)));
 
             CacheHandlerChain chain = factory.createChain();
